--- a/portifolio/templates/about.html
+++ b/portifolio/templates/about.html
@@ -1,11 +1,11 @@
 {% extends 'layouts.html' %}
 
 {% block title %}
-  Its Profile Page
+  Its About Page
 {% endblock title %}
 
 {% block content %}
 <div class="jumbotron">
-  <h1 class="text-center text-danger">Profile Page</h1>
+  <h1 class="text-center">About Page</h1>
 </div>
 {% endblock content %}
