--- a/portifolio/templates/contact.html
+++ b/portifolio/templates/contact.html
@@ -1,11 +1,11 @@
 {% extends 'layouts.html' %}
 
 {% block title %}
-  Its Profile Page
+  Its Contact Page
 {% endblock title %}
 
 {% block content %}
 <div class="jumbotron">
-  <h1 class="text-center text-danger">Profile Page</h1>
+  <h1 class="text-center">Contact Page</h1>
 </div>
 {% endblock content %}
