--- a/portifolio/templates/layouts.html
+++ b/portifolio/templates/layouts.html
@@ -26,14 +26,18 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link text-white" aria-current="page" href="#">Home</a>
+                <a class="nav-link text-white" aria-current="page"
+                 href="{% url 'home' %}">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="#">About</a>
+                <a class="nav-link text-white" href="{% url 'about' %}">About</a>
               </li>
               
               <li class="nav-item text-white">
-                <a class="nav-link text-white">Contact</a>
+                <a class="nav-link text-white" href="{% url 'contact' %}">Contact</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white" href="{% url 'profile' %}">Profile</a>
               </li>
             </ul>
             <form class="d-flex">
@@ -43,7 +47,7 @@
           </div>
         </div>
       </nav>
-
+      
       {% block content %}
 
       {% endblock %}
