--- a/portifolio/templates/index.html
+++ b/portifolio/templates/index.html
@@ -11,5 +11,16 @@
 {% include 'slider.html' %}
 <div class="jumbotron">
   <h1 class="text-center">Home Page</h1>
+  <p>Nome: {{ name }}</p>
+  <p>Idade: {{ age }}</p>
+  <p>Telefone: {{ phone }}</p>
+
+  <ul class="list">
+    {% for row in friend_name %}
+    <li class="list-item">{{row}}</li>
+    {% endfor %}
+    
+  </ul>
+
 </div>
 {% endblock content %}
