portifólio de clientes

--- a/portifolio/templates/index.html
+++ b/portifolio/templates/index.html
@@ -253,53 +253,19 @@
 
     <div class="row no-gutters clients-wrap clearfix" data-aos="fade-up">
 
+      {% for row in client %}
       <div class="col-lg-3 col-md-4 col-6">
-        <div class="client-logo">
-          <img src="{% static 'img/clients/client-1.png' %}" class="img-fluid" alt="">
-        </div>
+        <a href="{{ row.link }}">
+          <div class="client-logo">
+            <img src="{{ row.image.url}}" class="img-fluid" alt="{{ row.name}}">
+          </div>
+        </a>
+        
       </div>
+      {% endfor %}
+      
 
-      <div class="col-lg-3 col-md-4 col-6">
-        <div class="client-logo">
-          <img src="{% static 'img/clients/client-2.png' %}" class="img-fluid" alt="">
-        </div>
-      </div>
-
-      <div class="col-lg-3 col-md-4 col-6">
-        <div class="client-logo">
-          <img src="{% static 'img/clients/client-3.png' %}" class="img-fluid" alt="">
-        </div>
-      </div>
-
-      <div class="col-lg-3 col-md-4 col-6">
-        <div class="client-logo">
-          <img src="{% static 'img/clients/client-4.png' %}" class="img-fluid" alt="">
-        </div>
-      </div>
-
-      <div class="col-lg-3 col-md-4 col-6">
-        <div class="client-logo">
-          <img src="{% static 'img/clients/client-5.png' %}" class="img-fluid" alt="">
-        </div>
-      </div>
-
-      <div class="col-lg-3 col-md-4 col-6">
-        <div class="client-logo">
-          <img src="{% static 'img/clients/client-6.png' %}" class="img-fluid" alt="">
-        </div>
-      </div>
-
-      <div class="col-lg-3 col-md-4 col-6">
-        <div class="client-logo">
-          <img src="{% static 'img/clients/client-7.png' %}" class="img-fluid" alt="">
-        </div>
-      </div>
-
-      <div class="col-lg-3 col-md-4 col-6">
-        <div class="client-logo">
-          <img src="{% static 'img/clients/client-8.png' %}" class="img-fluid" alt="">
-        </div>
-      </div>
+     
 
     </div>
 
