--- a/portifolio/templates/authentication/login.html
+++ b/portifolio/templates/authentication/login.html
@@ -43,8 +43,8 @@
           {% csrf_token %}
           <div class="form-group">
             
-              <input type="email" name="email" class="form-control"
-               id="name" placeholder="Your Email" />
+              <input type="text" name="username" class="form-control"
+               id="username" placeholder="Your Username" />
               <div class="validate"></div><br>
             
           
