--- a/portifolio/templates/layouts.html
+++ b/portifolio/templates/layouts.html
@@ -78,7 +78,14 @@
           <li><a href="pricing.html">Pricing</a></li>
           <li><a href="blog.html">Blog</a></li>
           <li><a href="{% url 'contact' %}">Contact</a></li>
-          <li><a href="{% url 'login' %}">My Acount</a></li>
+
+          {% if user.is_authenticated %}
+            <li><a href="{% url 'login' %}">My Profile</a></li>
+          {% else %}
+            <li><a href="{% url 'login' %}">My Acount</a></li>
+          {% endif %}
+
+          
 
         </ul>
       </nav><!-- .nav-menu -->
