--- a/portifolio/templates/authentication/register.html
+++ b/portifolio/templates/authentication/register.html
@@ -38,28 +38,38 @@
 
     <div class="row mt-5 justify-content-center" data-aos="fade-up">
       <div class="col-lg-4">
-          <h2>Register Your Account</h2><br>
+        <h2>Register Your Account</h2><br>
+
+        {% for message in messages %}
+          <div class="alert {{message.tags}} alert-dismissable" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+            {{message}}
+          </div>
+        {% endfor %}
+
         <form action="" method="post">
           {% csrf_token %}
           <div class="form-group">
             <input type="name" name="name" class="form-control"
-            id="name" placeholder="Your Name" />
+             placeholder="Your Name" />
             <div class="validate"></div><br>
           </div> 
           <div class="form-group">
                <input type="email" name="email" class="form-control"
-               id="name" placeholder="Your Email" />
+                placeholder="Your Email" />
                <div class="validate"></div><br>
            </div>
           
             <div class="form-group">
                 <input type="password" name="password" class="form-control" 
-                id="name" placeholder="Your Password" />
+                 placeholder="Your Password" />
                 <div class="validate"></div><br>
             </div>
             <div class="form-group">
                 <input type="password" name="confirm_password" class="form-control" 
-                id="name" placeholder="Confirm your password" />
+                 placeholder="Confirm your password" />
                 <div class="validate"></div><br>
             </div>
                 <small>Forget my <a href="{% url 'forgetpassword' %}">Password</a></small>
