--- a/portifolio/templates/employee/profile.html
+++ b/portifolio/templates/employee/profile.html
@@ -40,7 +40,7 @@
 
             <div class="col-lg-6 info mt-6 mt-lg-0">
               
-              <p><a href="">Logout</a></p>
+              <p><a href="{% url 'logout' %}">Logout</a></p>
               
             </div>
 
